--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.2",
     "@mui/styled-engine-sc": "^6.0.2",
+    "@tanstack/react-query": "^5.55.0",
     "firebase": "^10.13.1",
     "jotai": "^2.9.3",
     "react": "^18.3.1",
